--- a/aboutme.html
+++ b/aboutme.html
@@ -3,28 +3,37 @@
 <head>
 <title>About Me</title>
 </head>
-<body>
+<body style="#ccffcc;">
 
-<h1>About Me</h1>
-<p>I am UnusualNapkin, an aspiring programming student.</p>
+<h1 style="color:blue;">About Me</h1>
+<p style="font-family:verdana;">I am UnusualNapkin, an aspiring programming student. I like video games, reading, and writing.
+  I especially like role playing (video) games.</p>
 
-<h2>Favorite Webpages</h2>
+<h2 style="color:red;">Favorite Webpages</h2>
 
+<pre>
 <a href="https://viki.com">Asian drama site</a>
 
 <a href="https://www.buzzfeed.com/quizzes?utm_term=.iiOQEP1ld#.iv96OwkAp">Fun quizzes, some are hit or miss</a>
 
 <a href="https://www.wikivoyage.org/">Travel advice site. Though it is a wiki, so tread carefully. Incomplete in some parts.</a>
+</pre>
 
-<h3>Scratch Projects</h3>
-<p>I made some basic projects in Scratch. They can be used as a reference.</p>
+<h3 style="#cc00ff">Scratch Projects</h3>
+<p style="font-family:verdana;">I made some basic projects in Scratch. They can be used as a reference.</p>
 
 <pre>
 <a href="https://scratch.mit.edu/projects/167448203/">Scratch Draws Shapes</a>
 
+<img src="drawshape.jpg" alt="Scratch Draws Shapes" style="width:200px;height:200px;">
+
 <a href="https://scratch.mit.edu/projects/167475393/">Pong Lite</a>
 
+<img src="ponglite.jpg" alt="Pong Lite" style="width:200px;height:200px;">
+
 <a href="https://scratch.mit.edu/projects/167592411/">Castle Runner: Dodge the Bugs!</a>
+  
+<img src="castlerunner.jpg" alt="Castle Runner" style="width:200px;height:200px;">
 </pre>
 
 </body>
