--- a/aboutme.html
+++ b/aboutme.html
@@ -25,15 +25,15 @@
 <pre>
 <a href="https://scratch.mit.edu/projects/167448203/">Scratch Draws Shapes</a>
 
-<img src="drawshape.jpg" alt="Scratch Draws Shapes" style="width:200px;height:200px;">
+<img src="drawshape.JPG" alt="Scratch Draws Shapes" style="width:200px;height:200px;">
 
 <a href="https://scratch.mit.edu/projects/167475393/">Pong Lite</a>
 
-<img src="ponglite.jpg" alt="Pong Lite" style="width:200px;height:200px;">
+<img src="ponglite.JPG" alt="Pong Lite" style="width:200px;height:200px;">
 
 <a href="https://scratch.mit.edu/projects/167592411/">Castle Runner: Dodge the Bugs!</a>
   
-<img src="castlerunner.jpg" alt="Castle Runner" style="width:200px;height:200px;">
+<img src="castlerunner.JPG" alt="Castle Runner" style="width:200px;height:200px;">
 </pre>
 
 </body>
