--- a/aboutme.html
+++ b/aboutme.html
@@ -35,6 +35,16 @@
   
 <img src="castlerunner.JPG" alt="Castle Runner" style="width:200px;height:200px;">
 </pre>
-
+  
+  <h4>Python</h4>
+  <p style="font-family:verdana;">I made some stuff in Python for my own use and as a demonstrator.</p>
+  
+  <pre>
+  <p>A Zombie Text Adventure game with choices</p>
+  
+  <p>A program to change any image into the style/coloring of Obama's "Hope" Poster</p>
+  
+  <p>A shape drawer like Scratch Draws Shapes</p>
+  </pre>
 </body>
 </html>
