--- a/aboutme.html
+++ b/aboutme.html
@@ -1,50 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About Me</title>
+  <title>About Me</title>
 </head>
 <body style="#ccffcc;">
 
-<h1 style="color:blue;">About Me</h1>
-<p style="font-family:verdana;">I am UnusualNapkin, an aspiring programming student. I like video games, reading, and writing.
-  I especially like role playing (video) games.</p>
-
-<h2 style="color:red;">Favorite Webpages</h2>
-
-<pre>
-<a href="https://viki.com">Asian drama site</a>
-
-<a href="https://www.buzzfeed.com/quizzes?utm_term=.iiOQEP1ld#.iv96OwkAp">Fun quizzes, some are hit or miss</a>
-
-<a href="https://www.wikivoyage.org/">Travel advice site. Though it is a wiki, so tread carefully. Incomplete in some parts.</a>
-</pre>
-
-<h3 style="#cc00ff">Scratch Projects</h3>
-<p style="font-family:verdana;">I made some basic projects in Scratch. They can be used as a reference.</p>
-
-<pre>
-<a href="https://scratch.mit.edu/projects/167448203/">Scratch Draws Shapes</a>
-
-<img src="drawshape.JPG" alt="Scratch Draws Shapes" style="width:200px;height:200px;">
-
-<a href="https://scratch.mit.edu/projects/167475393/">Pong Lite</a>
-
-<img src="ponglite.JPG" alt="Pong Lite" style="width:200px;height:200px;">
-
-<a href="https://scratch.mit.edu/projects/167592411/">Castle Runner: Dodge the Bugs!</a>
+ <div id = "about">
+    <h1 style="color:blue;">About Me</h1>
+      <p style="font-family:verdana;">I am UnusualNapkin, an aspiring programming student. I like video games, reading, and writing.
+       I especially like role playing (video) games.
+      </p>
+ </div>
   
-<img src="castlerunner.JPG" alt="Castle Runner" style="width:200px;height:200px;">
-</pre>
+  <div id = "webpage">
+    <h2 style="color:red;">Favorite Webpages</h2>
+      <pre>
+        <a href="https://viki.com">Asian drama site</a>
+
+        <a href="https://www.buzzfeed.com/quizzes?utm_term=.iiOQEP1ld#.iv96OwkAp">Fun quizzes, some are hit or miss</a>
+
+        <a href="https://www.wikivoyage.org/">Travel advice site. Though it is a wiki, so tread carefully. Incomplete in some parts.</a>
+      </pre>
+  </div>
+
+  <div id = "Scratch">
+    <h3 style="#cc00ff">Scratch Projects</h3>
+      <p style="font-family:verdana;">I made some basic projects in Scratch. They can be used as a reference.</p>
+
+      <pre>
+      <a href="https://scratch.mit.edu/projects/167448203/">Scratch Draws Shapes</a>
+
+      <img src="drawshape.JPG" alt="Scratch Draws Shapes" style="width:200px;height:200px;">
+
+      <a href="https://scratch.mit.edu/projects/167475393/">Pong Lite</a>
+
+      <img src="ponglite.JPG" alt="Pong Lite" style="width:200px;height:200px;">
+
+      <a href="https://scratch.mit.edu/projects/167592411/">Castle Runner: Dodge the Bugs!</a>
   
-  <h4>Python</h4>
-  <p style="font-family:verdana;">I made some stuff in Python for my own use and as a demonstrator.</p>
+      <img src="castlerunner.JPG" alt="Castle Runner" style="width:200px;height:200px;">
+      </pre>
+  </div>
   
-  <pre>
-  <p>A Zombie Text Adventure game with choices</p>
+  <div id = "Python">
+    <h4>Python</h4>
+      <p style="font-family:verdana;">I made some stuff in Python for my own use and as a demonstrator.</p>
   
-  <p>A program to change any image into the style/coloring of Obama's "Hope" Poster</p>
+      <pre>
+      <p>A Zombie Text Adventure game with choices</p>
   
-  <p>A shape drawer like Scratch Draws Shapes</p>
-  </pre>
+      <p>A program to change any image into the style/coloring of Obama's "Hope" Poster</p>
+  
+      <p>A shape drawer like Scratch Draws Shapes</p>
+      </pre>
+  </div>
+  
+  <div id = "robotics">
+    <h5>Robotics</h5>
+    <p style = "font-family:verdana;">Coding done through Arduino</p>
+   
+    <pre>
+    <p>"Singing" Robot</p>
+    
+    <p>Dancing robot</p>
+    
+    <p>Making a robot that can move and sense its surroundings</p>
+    </pre>
+  </div>
+  
 </body>
 </html>
