--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,25 @@
     h1 {color: blue;}
     h2 {color: black;}
     h3 {color: red;}
+    #about{
+      width: 100%;
+      background-color: aqua;
+    }
+    #webpage{
+      width: 100%;
+      background-color: violet;
+    }
+    #Scratch{
+      width: 100%;
+      background-color: aqua;
+    }
+    #Python{
+      width: 100%;
+      background-color: orange;
+    }
+    #robotics{
+      width: 100%;
+    }
   </style>
   <title>About Me</title>
 </head>
@@ -15,6 +34,7 @@
       <p style="font-family:verdana;">I am UnusualNapkin, an aspiring programming student. I like video games, reading, and writing.
        I especially like role playing (video) games.
       </p>
+      <p id="demo"></p>
  </div>
 
   <div id = "webpage">
@@ -73,5 +93,9 @@
     </pre>
   </div>
 
+  <!--<button type="button"
+  <onclick="document.getElementById("demo").innerHTML = Date()">
+  WIP, don't click</button> -->
 </body>
 </html>
+
