--- a/aboutme.html
+++ b/aboutme.html
@@ -34,6 +34,10 @@
   </script>
 </head>
 
+<script>
+window.alert("Welcome to my website!");
+</script>
+
  <div id = "about">
     <h1>About Me</h1>
       <p style="font-family:verdana;" id = "demo">
@@ -97,10 +101,6 @@
     <p style = "font-family:verdana;">Making a robot that can move and sense its surroundings</p>
     </pre>
   </div>
-
-  <!--<button type="button"
-  <onclick="document.getElementById("demo").innerHTML = Date()">
-  WIP, don't click</button> -->
+  
 </body>
 </html>
-
