--- a/aboutme.html
+++ b/aboutme.html
@@ -6,39 +6,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-    body {background-color: #ccffcc;}
-    h1 {color: blue;}
-    h2 {color: black;}
-    h3 {color: red;}
-    #about{
-      width: 100%;
-      background-color: aqua;
-    }
-    #webpage{
-      width: 100%;
-    }
-    #Scratch{
-      width: 100%;
-    }
-    #Python{
-      width: 100%;
-    }
-    #robotics{
-      width: 100%;
-    }
-  </style>
-  <title>About Me</title>
-  <script>
-  function aboutMe(){
-    document.getElementById("demo").innerHTML = "I am UnusualNapkin, an aspiring programming student. I like video games, reading, and writing. I especially like role playing (video) games.";
-  }
-  </script>
-</head>
+  <link rel="stylesheet" href="style.css">
+  <script src="aboutme.js"></script>
 
-  <script>
-  window.alert("Welcome to my website!");
-  </script>
+  <title>About Me</title>
+</head>
 
  <div id = "about">
     <h1>About Me</h1>
@@ -74,7 +46,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="drawshape.JPG" alt="Scratch Draws Shapes">
+            <img src="drawshape.JPG" alt="Scratch Draws Shapes" style="width:100%;">
             <div class="carousel-caption">
               <h3>Scratch Draws Shapes</h3>
               <p>Draw shapes with user input</p>
@@ -82,7 +54,7 @@
           </div>
 
           <div class="item">
-            <img src="ponglite.JPG" alt="Pong Lite">
+            <img src="ponglite.JPG" alt="Pong Lite" style="width:100%;">
             <div class="carousel-caption">
               <h3>Pong Lite</h3>
               <p>Play Pong in browser. Supports 1 and 2 player games or AI.</p>
@@ -90,7 +62,7 @@
           </div>
 
           <div class="item">
-            <img src="castlerunner.JPG" alt="Castle Runner">
+            <img src="castlerunner.JPG" alt="Castle Runner" style="width:100%;">
             <div class="carousel-caption">
               <h3>Castle Runner: Dodge the Bugs!</h3>
               <p>An endless runner where you jump to avoid bugs.</p>
@@ -140,7 +112,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-            <img src="zombies.JPG" alt="Zombies">
+            <img src="zombies.JPG" alt="Zombies" style="width:100%;">
             <div class="carousel-caption">
               <h3>Zombies</h3>
               <p>A text adventure where you kill zombies.</p>
@@ -148,7 +120,7 @@
           </div>
 
           <div class="item">
-            <img src="recolored.jpg" alt="After">
+            <img src="recolored.jpg" alt="After" style="width:100%;">
             <div class="carousel-caption">
               <h3>Obamicon</h3>
               <p>Changes any image to the style of Barack Obama's "Hope" poster. Original image by Karl O'Lynch von Town</p>
@@ -156,7 +128,7 @@
           </div>
 
           <div class="item">
-            <img src="pythonshape.JPG" alt="Python Shape Drawer">
+            <img src="pythonshape.JPG" alt="Python Shape Drawer" style="width:100%;">
             <div class="carousel-caption">
               <h3>Python Shape Drawer</h3>
               <p>Draws shapes and changes color based on user input.</p>
@@ -201,6 +173,12 @@
     <p style = "font-family:verdana;">Dancing robot</p>
     <p style = "font-family:verdana;">Making a robot that can move and sense its surroundings</p>
 
+  </div>
+
+  <div id="Final Project">
+    <h6>E-Saver</h6>
+    <p style = "font-family:verdana;">E-Saver is a website to raise awareness of climate change and give ways to save resources.</p>
+    <a href="https://laurenng.github.io/ecofriendly/eco%20friendly%20website/ecofriendly.html"></a>
   </div>
 
 </body>
